<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/pozadie"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/text_najlepsiHraci"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/najlepsi_hraci"
        android:textColor="#FF9800"
        android:textSize="36sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/text_hrac1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/hrac1"
        android:textColor="@color/darkGrey"
        android:textSize="30sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/text_hrac2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/hrac2"
        android:textColor="@color/darkGrey"
        android:textSize="30sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/text_hrac3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/hrac3"
        android:textColor="@color/darkGrey"
        android:textSize="30sp"
        android:textStyle="bold"
        />





    <Button
        android:id="@+id/hlavne_menu3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/hlavne_menu"
        android:textColor="@color/white"

        android:layout_marginHorizontal="30dp"
        android:textSize="20sp"
        app:backgroundTint="@color/purple_700"
         />







</LinearLayout>