<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/pozadie"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/text_vysledok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:gravity="center"
        android:text="@string/vysledok"
        android:textColor="#FF9800"
        android:textSize="36sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/text_gratulujeme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/gratulujeme"
        android:textColor="#FF9800"
        android:textSize="30sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/meno_hraca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/meno_hraca"
        android:textColor="#FF9800"
        android:textSize="30sp"
        android:textStyle="bold"
        />



    <TextView
        android:id="@+id/text_skore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/skore"
        android:textColor="@color/lightGrey"
        android:textSize="20sp"
        android:textStyle="bold"
        />



    <Button
        android:id="@+id/znova"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:text="@string/hrat_znovu"
        android:textColor="@color/white"
        android:layout_marginHorizontal="30dp"
        android:textSize="20sp"
        app:backgroundTint="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/hlavne_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/hlavne_menu"
        android:textColor="@color/white"
        android:layout_marginHorizontal="30dp"
        android:textSize="20sp"
        app:backgroundTint="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />







</LinearLayout>