<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/pozadie"
    android:orientation="vertical"
    tools:context=".ZaciatokHry">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kvizUvod"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        >

    </TextView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@android:color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/vitajte2"
                android:textColor="@color/darkGrey"
                android:textSize="30sp"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/zadajte_meno"
                android:textColor="@color/lightGrey"
                android:textSize="16sp"

                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/meno_hraca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/meno"
                    android:textColor="@color/darkGrey"
                    android:textColorHint="@color/lightGrey"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_zacat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zacat_kviz"
                android:layout_marginTop="16dp"
                android:textColor="@color/white"
                android:background="@color/purple_700"

                >

            </Button>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>