<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VybratKategoriu">
    android:background="@color/lightWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kategorie"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:padding="10dp"
            />
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/pozadie"
            android:layout_marginTop="50dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vlajky"
                android:textSize="30sp"
                android:textStyle="italic"
                android:textColor="@color/darkGrey"
                android:padding="25dp"/>

            <Button
                android:id="@+id/button_vlajky"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zvolte_kategoriu"
                android:background="#00000000"
                android:padding="20dp"
                android:textColor="@color/darkGrey"
                android:layout_alignParentBottom="true"/>

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/australiaflag"
                android:layout_alignParentRight="true"
                android:paddingRight="10dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/pozadie"
            android:layout_marginTop="50dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hlavne_mesta"
                android:textSize="30sp"
                android:textStyle="italic"
                android:textColor="@color/darkGrey"
                android:padding="25dp"/>

            <Button
                android:id="@+id/button_hlavne_mesta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zvolte_kategoriu"
                android:background="#00000000"
                android:padding="20dp"
                android:textColor="@color/darkGrey"
                android:layout_alignParentBottom="true"/>

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/capitals"
                android:layout_alignParentRight="true"
                android:paddingRight="10dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/pozadie"
            android:layout_marginTop="50dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slepa_mapa"
                android:textSize="30sp"
                android:textStyle="italic"
                android:textColor="@color/darkGrey"
                android:padding="25dp"/>

            <Button
                android:id="@+id/button_slepa_mapa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zvolte_kategoriu"
                android:background="#00000000"
                android:padding="20dp"
                android:textColor="@color/darkGrey"
                android:layout_alignParentBottom="true"/>

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/blank_map"
                android:layout_alignParentRight="true"
                android:paddingRight="10dp"/>
        </RelativeLayout>


    </LinearLayout>

</ScrollView>